Import sort and lint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,6 @@
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true
-  }
+  },
+  "exclude": ["src/test.ts"]
 }
