--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "karma-parallel": "^0.3.1",
+    "karma-tslint": "^1.3.0",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.5.4",
     "stylelint-config-sass-guidelines": "^7.0.0",
