--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": "stylelint-config-sass-guidelines",
   "rules": {
-    "max-nesting-depth": 2
+    "max-nesting-depth": 2,
+    "selector-max-id": 3
   }
 }
